# asm_opengl_triangle

./: .gitignore  CMakeLists.txt  README.md  build.sh  makefile
shaders/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  main.cc  main.s
src/filesystem/: read.s
src/shaders/: program_log_error.s  shader_log_error.s
src/shaders/loading/: shader_loader.s  shader_program_loader.s
